--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="VIMAL KUMAR | PORTFOIO"
       content="Web site created with MERN stack framework"
     />
-    <link crossorigin="use-credentials" rel="manifest" href="./manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
